--- a/shopmanager/shopapp/weixin/templates/weixin/pai_guide.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/pai_guide.html
@@ -13,6 +13,7 @@
       <p style="color:red">亲，恭喜您的申请获得通过！</p>
       <h3>兑奖的流程如下：</h3>
       <ul class="list-group">
+      <li class="list-group-item">0）加入优尼世界服务qq群。</li>
       <li class="list-group-item">1）到天猫【优尼世界旗舰店】找到商品，选择您喜欢的款式，拍下付款。</li>
       <li class="list-group-item">2）每天下午5点之前拍下的订单，当日发货。江浙沪皖24小时内到货。</li>
       <li class="list-group-item">3）收到货后，如果满意。请确认收货，天猫给好评（<font style="color:red">不得有免费字样</font>）。</li>
