--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -43,6 +43,7 @@
       <div class="row">
 	<div class="col-xs-12">
 	  <p>距离试用申请结束还有 <font style="color:red;font-size:20px">{{ days_left }}天{{ hours_left }}小时</font>，还共有 <font style="color:red;font-size:20px">{{ slots_left }}份</font>名额未开奖哦！</p>
+	  <p>第一批中奖名单已公布，<a href="/weixin/inviteresult/">请点击查看 >></a></p>
 	</div>
       </div>
       <div class="row">
