--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -9,7 +9,8 @@
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">公告</div>
     <div class="panel-body">
-      <p style="color:#e8792a">亲，优尼世界9月大礼：800件时尚婴幼儿斗篷/披风，加礼盒包装免费派送，<a href="/weixin/freesamples/">快来抢啊！ >> </a></p>
+      <p style="color:#e8792a">亲，优尼世界9月大礼：800件时尚婴幼儿斗篷/披风，另加800份神秘大礼，共计1600份！<a href="/weixin/freesamples/">快来抢啊！ >> </a></p>
+      <p style="color:#e8792a">第一批中奖名单，共{{ first_batch }}名，邀请码使用<font style="color:red">22</font>次以上，祝贺她们！<a href="/weixin/1/1/9/">查看详情 >></a></p>
     </div>
   </div>
 
