--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
@@ -38,7 +38,7 @@
       <div class="row">
 	<div class="col-xs-12">
 	  <p>留美海归团队设计，独家专利花型，天猫最时尚婴童斗篷，现在免费啦！</p>
-	  <p>这款天猫、京东已经售出10000多件，好评如潮的婴童斗篷，首次开放免费试用。<font style="color:red">共有800份名额，机会多到数不清，快抢啊！！！</font></p>  
+	  <p>这款天猫、京东已经售出10000多件，好评如潮的婴童斗篷，首次开放免费试用。<font style="color:red">斗篷派出800份名额，另加800粉神秘大礼，共计1600份！机会多到数不清，快抢啊！！！</font></p>  
 	  {% if vipcode == "898786" %} 
 	  <p style="font-size:20px; color:red; text-align:center">您刚才输入的VIP邀请码错误，请用正确的VIP邀请码重新申请!</p>
 	  {% else %}
