--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -35,17 +35,24 @@
 
 {% for sample in samples %}
 <div class="panel panel-default" style="margin-top:5px">
+  <div class="panel-heading" style="color:orange">公告</div>
+  <div class="panel-body">
+    <div class="row">
+      <div class="col-xs-12">
+	<p style="color:red">此次活动，斗篷派出800份名额，另加800粉神秘大礼，共计1600份！史上最强力度！</p>
+	<p>距离试用申请结束还有 <font style="color:red;font-size:20px">{{ days_left }}天{{ hours_left }}小时</font>，还共有 <font style="color:red;font-size:20px">{{ slots_left }}份</font>名额未开奖哦！</p>
+	<p>第一批中奖名单已公布，共{{ first_batch }}名，<a href="/weixin/inviteresult/">请点击查看 >></a></p>
+      </div>
+    </div>
+    
+  </div>
+  </div>
+
   <div class="panel-heading" style="color:orange">免费试用：{{ sample.name }}</div>
   <div class="panel-body">
     
     <form class="form-group" method="post" action="/weixin/sampleapply/" onsubmit="return check()">{% csrf_token %}
       <input type="hidden" value="{{ sample.pk }}" name="sample_pk"/>
-      <div class="row">
-	<div class="col-xs-12">
-	  <p>距离试用申请结束还有 <font style="color:red;font-size:20px">{{ days_left }}天{{ hours_left }}小时</font>，还共有 <font style="color:red;font-size:20px">{{ slots_left }}份</font>名额未开奖哦！</p>
-	  <p>第一批中奖名单已公布，共{{ first_batch }}名，<a href="/weixin/inviteresult/">请点击查看 >></a></p>
-	</div>
-      </div>
       <div class="row">
 	<div class="col-xs-6" style="text-align:center">
 	  <p><a href="{{ sample.sale_url }}">查看商品详情</a></p>
