--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -46,7 +46,7 @@
     </div>
   </div>
 
-
+  <div class="panel panel-default" style="margin-top:5px">
   <div class="panel-heading" style="color:orange">免费试用：{{ sample.name }}</div>
   <div class="panel-body">
     
