fix unisotry and sample choose admin

--- a/shopmanager/shopapp/weixin/templates/weixin/unilittles_story.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/unilittles_story.html
@@ -5,16 +5,11 @@
 {% block container %}
 
 <div class="container-fluid">
-  <h5>1. 品牌理念</h5>
-      <a href="" class="thumbnail">
-	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLujaWIe5B3s9kWcJQfNs39HQuB5ibdvHKYXpjXOY1gCNic70U02bIdsE3IibW6ic0qOvzxY0dZaAuBwWg/0" alt="...">
+      <a href="" class="thumbnail" style="padding:0px;margin-bottom:0px;">
+	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLsRWbEbeOiaHBExWQGPyK4aj8mebth0fb6NTGS6RGtZyruos7pb2CkGe81UfiaWgCsNAbPlI6QywApQ/0" alt="...">
       </a>
-  <h5>2. 发展历程</h5>
-      <a href="" class="thumbnail">
-	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtVnwUdA9hdEwcj8mmYt71iaPWGBCxICBZ5TLHa0SWrD5W3Q4K2NkibMiaVUJKQicqJdLtJVibedpskXicA/0" alt="...">
-      </a>
-      <a href="" class="thumbnail">
-	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtVnwUdA9hdEwcj8mmYt71iaIz2OdYRRQEmOXL8t57CapZyXDhdUOyqibBU0Vcia0jVKXx9BDibHCMYAQ/0" alt="...">
+      <a href="" class="thumbnail" style="padding:0px;margin-bottom:0px;">
+	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLsRWbEbeOiaHBExWQGPyK4ajCu587MQPjbcEketBLzYCVXYJw7m1wBX1pPJGjWs8mspcBPbN9oZpuw/0" alt="...">
       </a>
 
   <div class="footer">
