--- a/shopmanager/shopapp/weixin/templates/weixin/refundreview.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/refundreview.html
@@ -5,7 +5,8 @@
 {% block title %} 返利申请 {% endblock %}
 
 {% block container %}
-
+<link href='{{ STATIC_URL }}jquery-datatable-addon/css/demo_page.css' rel='stylesheet'  />
+<link href='{{ STATIC_URL }}jquery-datatable-addon/css/demo_table.css' rel='stylesheet'  />
 <div class="container">
 
   <div class="panel panel-default" style="margin-top:5px">
@@ -55,6 +56,7 @@
 {% endblock %}
 
 {% block tail_script %}
+<script src="{{ STATIC_URL }}jquery-datatable-addon/jquery.dataTables.min.js" type="text/javascript"></script>
 <script type="text/javascript">
   function review() {
     var action = $("#id_action").val();
