--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -12,6 +12,7 @@
       <p style="color:#e8792a">亲，优尼世界9月大礼：800件时尚婴幼儿斗篷/披风，另加800份神秘大礼，共计1600份！<a href="/weixin/freesamples/">快来抢啊！ >> </a></p>
       <p style="color:#e8792a">第一批中奖名单，共{{ first_batch }}名，邀请码使用<font style="color:red">22</font>次以上，祝贺她们！<a href="/weixin/finallist/1/1/9/">查看详情 >></a></p>
       <p style="color:#e8792a">第二批中奖名单，共{{ second_batch }}名，邀请码使用<font style="color:red">24</font>次以上，祝贺她们！<a href="/weixin/finallist/2/1/9/">查看详情 >></a></p>
+      <p style="color:#e8792a">第三批中奖名单，共{{ third_batch }}名，邀请码使用<font style="color:red">28</font>次以上，祝贺她们！<a href="/weixin/finallist/3/1/9/">查看详情 >></a></p>
     </div>
   </div>
 
