font size change

--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -39,7 +39,7 @@
             {% endif %}
           <p style="color:red">申请进群时，请提供您的VIP邀请码！若不能进群，请联系微信客服！</p>
           {% else %}
-          <p>阅读完以上说明之后，请<a href="/weixin/samplechoose/">点击进入兑奖 >></a></p>
+          <p>阅读完以上说明之后，请<a href="/weixin/samplechoose/"><font style="font-size:20px">点击进入兑奖 >></font></a></p>
           {% endif %}
         {% endif %}
       {% else %}
