--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -49,7 +49,8 @@
       <p style="color:#029fd6">亲，您还没有提交试用申请哦！</p>
       {% endif %}
       <h5 style="color:#029fd6">申请攻略：</h5>
-      <p>活动数据表明：每1000位妈妈中，只有不到2位的VIP邀请码能被使用超过9次。所以，只要您稍稍用心，一切都变得so easy！！ <font style="color:#029fd6">记住，一定要让妈妈好友闺密使用你的邀请码！</font>她们申请到了会感谢您！</font></p>
+      <p>1. <font style="color:#029fd6">记住，一定要让妈妈好友闺密使用你的邀请码！</font>她们申请到了会感谢您！</font></p>
+      <p>2. <font style="color:#029fd6"> 论坛攻略：你在论坛回帖中带上你的vip邀请码试试，很不一样哦！</font></p>
       <p>亲，分享、邀请，继续加油吧，惊喜等着您！</p>
 
       {% if False %}
