--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -50,7 +50,7 @@
       {% endif %}
       <h5 style="color:#029fd6">申请攻略：</h5>
       <p>1. <font style="color:#029fd6">记住，一定要让妈妈好友闺密使用你的邀请码！</font>她们申请到了会感谢您！</font></p>
-      <p>2. <font style="color:#029fd6"> 论坛攻略：在论坛回帖中带上你的vip邀请码试试，很不一样哦！</font></p>
+      <p>2. <font style="color:#029fd6"> 论坛/微博攻略： 发帖会被删，回帖一般不会。在回帖中带上你的vip邀请码试试，很不一样哦！</font></p>
       <p>亲，分享、邀请，继续加油吧，惊喜等着您！</p>
 
       {% if False %}
