--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -44,6 +44,7 @@
 	  <p>第一批中奖名单已公布，共{{ first_batch }}名，<a href="/weixin/inviteresult/">请点击查看 >></a></p>
 	  <p>第二批中奖名单已公布，共{{ second_batch }}名，<a href="/weixin/inviteresult/">请点击查看 >></a></p>
 	  <p>第三批中奖名单已公布，共{{ third_batch }}名，<a href="/weixin/inviteresult/">请点击查看 >></a></p>
+	  <p>第四批中奖名单已公布，共{{ fourth_batch }}名，<a href="/weixin/inviteresult/">请点击查看 >></a></p>
 	</div>
       </div>
     </div>
