--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -39,7 +39,7 @@
     <div class="panel-body">
       <div class="row">
 	<div class="col-xs-12">
-	  <p style="color:red">此次活动，斗篷派出800份名额，另加800粉神秘大礼，共计1600份！史上最强力度！</p>
+	  <p style="color:red">此次活动，斗篷派出800份名额，另加800份分腿睡袋，共计1600份！史上最强力度！</p>
 	  <p>距离试用申请结束还有 <font style="color:red;font-size:20px">{{ days_left }}天{{ hours_left }}小时</font>，还共有 <font style="color:red;font-size:20px">{{ slots_left }}份</font>名额未开奖哦！</p>
 	  <p>第一批中奖，共{{ first_batch }}名，<a href="/weixin/inviteresult/">请点击查看 >></a></p>
 	  <p>第二批中奖，共{{ second_batch }}名，<a href="/weixin/inviteresult/">请点击查看 >></a></p>
