relate order fix

--- a/shopmanager/templates/admin/trades/change_list.html
+++ b/shopmanager/templates/admin/trades/change_list.html
@@ -82,7 +82,7 @@
               </a>
             </li>
             <li>
-              <a href="/orders/related/orders/" class="addlink" target="_blank">
+              <a href="/trades/related/orders/" class="addlink" target="_blank">
                 关联销售
               </a>
             </li>
