--- a/shopmanager/templates/related_orders_template.html
+++ b/shopmanager/templates/related_orders_template.html
@@ -5,8 +5,6 @@
     <title>关联销售</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap2.3.2.min.css" rel="stylesheet" type="text/css">
-    <link href="{{ STATIC_URL }}css/table.less" rel="stylesheet/less" type="text/css">
-    <script src="{{ STATIC_URL }}script/less.min.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}script/jquery-1.7.1.min.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css" />
@@ -33,7 +31,7 @@
 	{% if object %}
 	<div class="container">
 	<div style="height:80px;">
-			<form  class="form-inline" method="POST" action="/orders/related/orders/" >
+			<form  class="form-inline" method="POST" action="/trades/related/orders/" >
 			<ul>
 				<li>
 					<label class="control-label" for="df">起始日期:</label>
@@ -57,14 +55,17 @@
 			</ul>
 			</form>
 	</div>
-    <div class='w3c_tables'>
-        <table align="center">
+    <div >
+        <table align="center" class="table table-striped table-bordered table-condensed">
 	        <thead style="background-color:#C3C3C3;">
-	        <td>商品外部编码</td>
-	        <td>商品图片</td>
-	        <td>商品名称</td>
-	        <td>关联商品销售数量</td>
+	        	<tr>
+	        		<th>商品外部编码</th>
+	        		<th>商品图片</th>
+	        		<th>商品名称</th>
+	        		<th>关联商品销售数量</th>
+	        	</tr>
 	        </thead>
+	        <tbody>
 	        {% for item in object.order_items %}
 	            <tr >
 	            	<td >{{ item.0 }}</td>
@@ -73,6 +74,7 @@
 					<td >{{ item.3 }}</td>
 	            </tr>
 	        {% endfor %}
+	        </tbody>
         </table>
     </div>
     {% else %}
