--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -45,6 +45,7 @@
 	  <p>第二批中奖，共{{ second_batch }}名，<a href="/weixin/inviteresult/">请点击查看 >></a></p>
 	  <p>第三批中奖，共{{ third_batch }}名，<a href="/weixin/inviteresult/">请点击查看 >></a></p>
 	  <p>第四批中奖，共{{ fourth_batch }}名，<a href="/weixin/inviteresult/">请点击查看 >></a></p>
+	  <p>第五批中奖，共{{ fifth_batch }}名，<a href="/weixin/inviteresult/">请点击查看 >></a></p>
 	</div>
       </div>
     </div>
