--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -14,6 +14,7 @@
       <p style="color:#e8792a">第二批中奖名单，共{{ second_batch }}名，邀请码使用<font style="color:red">24</font>次以上，祝贺她们！<a href="/weixin/finallist/2/1/9/">查看详情 >></a></p>
       <p style="color:#e8792a">第三批中奖名单，共{{ third_batch }}名，邀请码使用<font style="color:red">28</font>次以上，祝贺她们！<a href="/weixin/finallist/3/1/9/">查看详情 >></a></p>
       <p style="color:#e8792a">第四批中奖名单，共{{ fourth_batch }}名，邀请码使用<font style="color:red">27</font>次以上，祝贺她们！<a href="/weixin/finallist/4/1/9/">查看详情 >></a></p>
+      <p style="color:#e8792a">第五批中奖名单，共{{ fifth_batch }}名，邀请码使用<font style="color:red">22</font>次以上，祝贺她们！<a href="/weixin/finallist/5/1/9/">查看详情 >></a></p>
     </div>
   </div>
 
