freesample html change

--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -41,11 +41,8 @@
 	<div class="col-xs-12">
 	  <p style="color:red">此次活动，斗篷派出800份名额，另加800份分腿睡袋，共计1600份！史上最强力度！</p>
 	  <p>距离试用申请结束还有 <font style="color:red;font-size:20px">{{ days_left }}天{{ hours_left }}小时</font>，还共有 <font style="color:red;font-size:20px">{{ slots_left }}份</font>名额未开奖哦！</p>
-	  <p>第一批中奖，共{{ first_batch }}名，<a href="/weixin/inviteresult/">请点击查看 >></a></p>
-	  <p>第二批中奖，共{{ second_batch }}名，<a href="/weixin/inviteresult/">请点击查看 >></a></p>
-	  <p>第三批中奖，共{{ third_batch }}名，<a href="/weixin/inviteresult/">请点击查看 >></a></p>
-	  <p>第四批中奖，共{{ fourth_batch }}名，<a href="/weixin/inviteresult/">请点击查看 >></a></p>
-	  <p>第五批中奖，共{{ fifth_batch }}名，<a href="/weixin/inviteresult/">请点击查看 >></a></p>
+	  <p>前五批中奖，共{{ five_batch }}名，<a href="/weixin/inviteresult/">请点击查看 >></a></p>
+	  <p style="color:red">特别提醒：最后一批名单({{ slots_left }}份)将在周日上午10点前公布。周五晚上不公布名单，大家好好休息，可以看“中国好声音哦”！</p>
 	</div>
       </div>
     </div>
