--- a/shopmanager/shopapp/weixin/templates/weixin/sample_choose.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sample_choose.html
@@ -28,13 +28,12 @@
       </div>
 
       <div class="row">
-	<h5 style="color:red">亲们：在选择时请尽量考虑分腿睡袋（多款式，多尺寸，多种厚度）。睡袋价值多至159元，最大的105cm可用到6岁。</h5>
 	<div class="col-xs-2"></div>
 	<div class="col-xs-8" style="text-align:center" id="id_msg">
 	  <form method="post" action="/weixin/samplechoose/">{% csrf_token %}
 	  <select id="id_selection" name="selection" class="form-control input-sm">
-	    <option value="2">时尚分腿睡袋（0-6岁）</option>
 	    <option value="1">时尚斗篷/披风</option>
+	    <option value="2">时尚分腿睡袋</option>
 	  </select>
 	  <div class="col-xs-12" style="text-align:center;margin-top:10px" id="id_promt"></div>
 	  <button type="submit" class="btn btn-warning" id="id_submit">确定选择</button>
