--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -33,20 +33,30 @@
   </div>
   {% endif %}
 
-{% for sample in samples %}
+
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">公告</div>
     <div class="panel-body">
       <div class="row">
 	<div class="col-xs-12">
-	  <p style="color:red">此次活动，斗篷派出800份名额，另加800份分腿睡袋，共计1600份！史上最强力度！</p>
+	  {% if ended %}
+	  <p style="color:red">亲，9月大礼试用活动已经结束，请继续关注后续活动哦！</p>
+	  {% else %}
+	  <p>此次活动，斗篷派出800份名额，另加800份分腿睡袋，共计1600份！史上最强力度！</p>
 	  <p>距离试用申请结束还有 <font style="color:red;font-size:20px">{{ days_left }}天{{ hours_left }}小时</font>，还共有 <font style="color:red;font-size:20px">{{ slots_left }}份</font>名额未开奖哦！</p>
+	  {% endif %}
 	  <p>前五批中奖，共{{ five_batch }}名，<a href="/weixin/inviteresult/">请点击查看 >></a></p>
+	  {% if ended %}
+	  <p>第六批中奖，共{{ six_batch }}名，<a href="/weixin/inviteresult/">请点击查看 >></a></p>
+	  {% else %}
 	  <p style="color:red">特别提醒：最后一批名单({{ slots_left }}份)将在周日上午10点前公布。周五晚上不公布名单，大家好好休息，可以看“中国好声音哦”！</p>
+	  {% endif %}
 	</div>
       </div>
     </div>
   </div>
+
+{% for sample in samples %}
 
   <div class="panel panel-default" style="margin-top:5px">
   <div class="panel-heading" style="color:orange">免费试用：{{ sample.name }}</div>
