--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -9,11 +9,8 @@
   <ul class="list-group">
     <li class="list-group-item list-group-item-success">我的积分</li>
     <li class="list-group-item"><p style="color:orange">累计: {{ score }}分<span style="font-size:26px"></p></li>
+    <li class="list-group-item"><p style="color:orange">积分明细（待开放）>><span style="font-size:26px"></p></li>
   </ul>
-
-    </div>
-  </div>
-
 
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">9月试用审核状态</div>
