--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -109,8 +109,8 @@
     <div class="panel-body">
       <p>亲们，若您的申请已审核通过，请仔细阅读审核页面的说明，务必在活动结束后<font style="color:red">5个工作日内</font>按照指示操作领取试用产品！不要忘记错过啦！</p>
       <p>为了保证活动的公正性和真实性，我们保留历史中奖名单供查询。</p>
-      <a href="/weixin/finallist/1/1/9/">9月中奖名单 >></a>
-      <a href="/weixin/finallist/1/1/8/">8月中奖名单 >></a>
+      <p><a href="/weixin/finallist/1/1/9/">9月中奖名单 >></a></p>
+      <p><a href="/weixin/finallist/1/1/8/">8月中奖名单 >></a></p>
     </div>
   </div>
   
