score detail list

--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -9,7 +9,7 @@
   <ul class="list-group">
     <li class="list-group-item list-group-item-success">我的积分</li>
     <li class="list-group-item"><p style="color:orange">累计: {{ score }}分<span style="font-size:26px"></p></li>
-    <li class="list-group-item"><p style="color:orange">积分明细（待开放）>><span style="font-size:26px"></p></li>
+    <li class="list-group-item"><a href="/weixin/score/{{pk}}/">积分明细>><a></li>
   </ul>
 
   <div class="panel panel-default" style="margin-top:5px">
