--- a/shopmanager/shopapp/weixin/templates/weixin/score.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/score.html
@@ -1,5 +1,7 @@
 {% extends "weixin/weixin_base.html" %}
 
+{% load custom_filter %}
+
 {% block title %} 我的积分 {% endblock %}
 
 {% block container %}
