--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -8,7 +8,7 @@
 
   <ul class="list-group">
     <li class="list-group-item list-group-item-success">我的积分</li>
-    <li class="list-group-item"><p style="color:orange">累计: <span style="font-size:26px">{{ score }}</span>分 (<a href="/weixin/score/{{pk}}/">积分明细>><a>)</p></li>
+    <li class="list-group-item"><span style="color:orange">累计: <font style="font-size:26px">{{ score }}</font>分</span> (<a href="/weixin/score/{{pk}}/">积分明细>><a>)</li>
   </ul>
 
   <div class="panel panel-default" style="margin-top:5px">
