--- a/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam_share.html
+++ b/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam_share.html
@@ -15,7 +15,7 @@
 	<div class="col-xs-12">
 	  <h5 style="color:#029fd6">崔玉涛 经典育儿知识 一站到底!</h5>
 	  <div>
-	    <a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/examination/%3Fuserpk={{ userpk }}&response_type=code&scope=snsapi_base&state=135#wechat_redirect" class="btn"></a>
+	    <a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/examination/%3Fuserpk={{ userpk }}&response_type=code&scope=snsapi_base&state=135#wechat_redirect" class="btn">点击开始</a>
 	  </div>
 	</div>
       </div>
