--- a/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam_share.html
+++ b/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam_share.html
@@ -20,12 +20,15 @@
 	</div>
       </div>
 
-      <div class="row">
-	<div class="col-xs-12" style="text-align:center">
+      <div class="row" style="margin-top:5px">
+	<div class="col-xs-12">
 	  <p>温馨提示：所有经典育儿知识问答题目均来自明星医师“崔玉涛”的“家庭育儿”及“健康公开课”系列丛书。有兴趣的优粉美妈们可以自行购买阅读哦！</p>
 	</div>
       </div>
       
+      <div class="footer">
+	<p>© Uni Littles 2014</p>
+      </div>
 
     </div>
   </div>
