--- a/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam_share.html
+++ b/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam_share.html
@@ -15,13 +15,13 @@
 	<div class="col-xs-12">
 	  <p style="color:#029fd6">美丽辣妈们，您是育儿高手！您有满腹育儿经！！ 您拥有养娃带娃的百分百经验！！！</p>
 	  <p style="color:#029fd6">还等什么，快来挑战“崔玉涛”医师的经典问答题目，一站到底！</p>
-	  <div>
+	  <div style="text-align:center;margin-top:10px">
 	    <a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/examination/{{ userpk }}/&response_type=code&scope=snsapi_base&state=135#wechat_redirect" class="btn btn-warning">点击开始</a>
 	  </div>
 	</div>
       </div>
 
-      <div class="row" style="margin-top:5px">
+      <div class="row" style="margin-top:15px">
 	<div class="col-xs-12">
 	  <p>温馨提示：所有经典育儿知识问答内容题目均来自明星医师“崔玉涛”的“家庭育儿”及“健康公开课”系列丛书。有兴趣的优粉美妈们可以自行购买阅读哦！</p>
 	</div>
