--- a/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam.html
+++ b/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam.html
@@ -5,7 +5,7 @@
 {% block container %}
 <div class="container-fluid">
 <div class="panel panel-default" style="margin-top: 5px">
-<div class="panel-heading" style="color: orange">{{ problem.problem_title }}</div>
+<div class="panel-heading" style="color: orange">{{ exam_user_paper.answer_num + 1 }}.{{ problem.problem_title }}</div>
 <form name="form1" method="POST" action="./">
 {% csrf_token %}
 <input type="hidden" name="paper_id" value="{{ exam_user_paper.paper_id }}"/>
@@ -13,26 +13,22 @@
 <table class="table">
 	{% if problem.option_a %}
 	<tr>
-		<td><input type="radio" id="selected_A" name="selected" value="A">
-		<label class="label label-primary" for="selected_A">{{ problem.option_a }}</label></td>
+		<td><input type="radio" id="selected_A" name="selected" value="A">{{ problem.option_a }}</td>
 	</tr>
 	{% endif %}
 	{% if problem.option_b %}
 	<tr>
-		<td><input type="radio" id="selected_B" name="selected" value="B">
-		<label class="label label-primary" for="selected_B">{{ problem.option_b }}</label></td>
+		<td><input type="radio" id="selected_B" name="selected" value="B">{{ problem.option_b }}</td>
 	</tr>
 	{% endif %}
 	{% if problem.option_c %}
 	<tr>
-		<td><input type="radio" id="selected_C" name="selected" value="C">
-		<label class="label label-primary" for="selected_C">{{ problem.option_c }}</label></td>
+		<td><input type="radio" id="selected_C" name="selected" value="C">{{ problem.option_c }}</td>
 	</tr>
 	{% endif %}
 	{% if problem.option_d %}
 	<tr>
-		<td><input type="radio" id="selected_D" name="selected" value="D">
-		<label class="label label-primary" for="selected_D">{{ problem.option_d }}</label></td>
+		<td><input type="radio" id="selected_D" name="selected" value="D">{{ problem.option_d }}</td>
 	</tr>
 	{% endif %}
 </table>
