--- a/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam_final.html
+++ b/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam_final.html
@@ -1,16 +1,16 @@
 {% extends "weixin/weixin_base.html" %}
 
-{% block title %} 微信妈妈答题结果 {% endblock %}
+{% block title %} 一站到底：崔玉涛经典育儿知识问答 我击败了90%的新手妈妈！{% endblock %}
 
 {% block container %}
 
 <div class="container-fluid">
    <div class="panel panel-default" style="margin-top:5px">
-    <div class="panel-heading" style="color:orange">公告</div>
+    <div class="panel-heading" style="color:orange">答题结束啦！</div>
     <div class="panel-body">
       <div class="row">
 	<div class="col-xs-12">
-	  <p style="color:red">您本次答对{{ exam_user_paper.answer_num }}题，恭喜您！</p>
+	  <p style="color:red">您本次答对{{ exam_user_paper.grade }}题，恭喜您！</p>
 	</div>
     </div>
   </div>
