--- a/shopmanager/shopapp/weixin/templates/weixin/refundreviewblock.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/refundreviewblock.html
@@ -40,7 +40,7 @@
 </table>
 {% endif %}
 
-<table class="table table-bordered">
+<table id="table-review" class="table table-bordered">
   <thead>
     <th>返利状态</th><th>申请时间</th><th>返利方式</th><th>返利金额</th><th>审核备注</th><th>返现备注</th><th>审核</th>
   </thead>
