--- a/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam.html
+++ b/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam.html
@@ -26,7 +26,7 @@
 {% block container %}
 <div class="container-fluid">
   <div class="panel panel-default" style="margin-top: 5px" id="id_problem_body">
-    {{ html_block_content }}
+    {% include "weixin/html_block_content.html" %}
   </div>
 
   <div class="footer">
