--- a/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam_block.html
+++ b/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam_block.html
@@ -39,9 +39,9 @@
 </div>
 {% endif %}
 
-<div class="row" style="margin-top:10px;margin-bottom:10px">
+<div class="row" style="margin-top:20px;margin-bottom:10px">
   <div class="col-xs-12" style="text-align:center">
-    <button type="button" class="btn btn-success" onclick="submit()">确定，并继续</button>
+    <button type="button" class="btn btn-success" onclick="submit();">确定，并继续</button>
   </div>
 </div>
 
