--- a/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam.html
+++ b/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam.html
@@ -43,11 +43,11 @@
     if ($("#selected_A").is(':checked')) {
       return true;
     } else if ($("#selected_B").is(':checked')) {
-      return true
+      return true;
     } else if ($("#selected_C").is(':checked')) {
-      return true
+      return true;
     } else if ($("#selected_D").is(':checked')) {
-      return true
+      return true;
     }
     return false;
   }
