--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -6,14 +6,20 @@
 
 <div class="container-fluid">
 
-  <ul class="list-group">
-    <li class="list-group-item list-group-item-success">我的积分</li>
-    <li class="list-group-item"><span style="color:orange">累计: <font style="font-size:26px">{{ score }}</font>分</span> (<a href="/weixin/score/{{pk}}/">积分明细>></a>)</li>
-    {% if pk == 2 %}
-    <a href="/weixin/examination/share/2/">click</a>
-    {% endif %}
-  </ul>
-
+  <div class="panel panel-default" style="margin-top:5px">
+    <div class="panel-heading" style="color:orange">我的积分</div>
+    <div class="panel-body">
+      <div class="row">
+	<div class="col-xs-6">
+	  <span style="color:orange">累计: <font style="font-size:26px">{{ score }}</font>分</span>
+	</div>
+	<div class="col-xs-6">
+	  <a href="/weixin/score/{{pk}}/">积分明细>></a>
+	</div>
+      </div>
+    </div>
+  </div>
+  
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">9月试用审核状态</div>
     <div class="panel-body">
