--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -10,11 +10,18 @@
     <div class="panel-heading" style="color:orange">我的积分</div>
     <div class="panel-body">
       <div class="row">
-	<div class="col-xs-6">
+	<div class="col-xs-12">
 	  <span style="color:orange">累计: <font style="font-size:26px">{{ score }}</font>分</span>
 	</div>
-	<div class="col-xs-6">
+      </div>
+      <div class="row">
+	<div class="col-xs-12">
 	  <a href="/weixin/score/{{pk}}/">积分明细>></a>
+	</div>
+      </div>
+      <div class="row">
+	<div class="col-xs-12">
+	  <a href="/weixin/scorerule/">积分规则>></a>
 	</div>
       </div>
     </div>
