--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -14,13 +14,11 @@
 	  <span style="color:orange">累计: <font style="font-size:26px">{{ score }}</font>分</span>
 	</div>
       </div>
-      <div class="row">
-	<div class="col-xs-12">
+      <div class="row" style="margin-top:5px">
+	<div class="col-xs-6">
 	  <a href="/weixin/score/{{pk}}/">积分明细>></a>
 	</div>
-      </div>
-      <div class="row">
-	<div class="col-xs-12">
+	<div class="col-xs-6">
 	  <a href="/weixin/scorerule/">积分规则>></a>
 	</div>
       </div>
