free sample page

--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -43,10 +43,9 @@
 	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLs3fFxcBMRZsmProgXkuSPF4esicxuYzMibQhriaicJFXdntMnicPf5cfQjNNibWUF8BJRn1RLURwOUmLKw/0" alt="...">
 	  </a>
 	  <p>优尼美妈们：</p>
-	  <p>优尼世界积分系统正式开放啦！</p>
-	  <p>9月答题赢积分，可用积分<font style="color:red">折上折换购</font>小小派睡袋哦！</p>
-	  <p>（注：每天仅限积分排名前100位哦！）</p>
-
+	  <p>优尼世界积分系统正式上线啦！</p>
+	  <p>9月答题赢积分，可用积分<font style="color:red;font-size:20px">折上再5折换购</font>小小派睡袋哦！（注：每天仅限积分排名前100位！）</p>
+	  <p><a href="/weixin/examination/share/{{ pk }}/">点击进入答题挑战 >></a></p>
 	</div>
       </div>
     </div>
