--- a/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam_share.html
+++ b/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam_share.html
@@ -17,6 +17,9 @@
     <div class="panel-body">
       <div class="row">
 	<div class="col-xs-12">
+	  <a href="#" class="thumbnail">
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLsh06icAmzwh1ZZbDRanEJIQRvBVLCiaPFiaHOTibsEg3hOY13BeJmSFZZGfiaRqZYmC1ELxuAbvHAm65w/0" alt="...">
+	  </a>
 	  {% if paper_finished %}
 	  <p style="color:#029fd6">亲，您已经完成了答题挑战，豪取{{ grade }}个积分！恭喜！</p>
 	  <p style="color:#029fd6">快分享到朋友圈，让您的好友一起来挑战吧！</p>
