--- a/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam_share.html
+++ b/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam_share.html
@@ -13,11 +13,13 @@
 <div class="container-fluid">
 
   <div class="panel panel-default" style="margin-top:5px">
-    <h4>崔玉涛-经典育儿知识问答（系列一）</h4>
+    <h5>崔玉涛-经典育儿知识问答（系列一）</h5>
     <div class="panel-body">
       <div class="row">
 	<div class="col-xs-12">
+	  <div class="thumbnail">
 	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLsh06icAmzwh1ZZbDRanEJIQRvBVLCiaPFiaHOTibsEg3hOY13BeJmSFZZGfiaRqZYmC1ELxuAbvHAm65w/0" alt="...">
+	  </div>
 	  {% if paper_finished %}
 	  <p style="color:#029fd6">亲，您已经完成了答题挑战，豪取{{ grade }}个积分！恭喜！</p>
 	  <p style="color:#029fd6">快分享到朋友圈，让您的好友一起来挑战吧！</p>
