--- a/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam_share.html
+++ b/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam_share.html
@@ -13,12 +13,12 @@
 <div class="container-fluid">
 
   <div class="panel panel-default" style="margin-top:5px">
-    <h5>崔玉涛-经典育儿知识问答（系列一）</h5>
+    <div class="panel-heading" style="color:orange">崔玉涛-经典育儿知识问答（系列一）</div>
     <div class="panel-body">
       <div class="row">
 	<div class="col-xs-12">
 	  <div class="thumbnail">
-	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLsh06icAmzwh1ZZbDRanEJIQRvBVLCiaPFiaHOTibsEg3hOY13BeJmSFZZGfiaRqZYmC1ELxuAbvHAm65w/0" alt="...">
+	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLs3fFxcBMRZsmProgXkuSPF4esicxuYzMibQhriaicJFXdntMnicPf5cfQjNNibWUF8BJRn1RLURwOUmLKw/0" alt="...">
 	  </div>
 	  {% if paper_finished %}
 	  <p style="color:#029fd6">亲，您已经完成了答题挑战，豪取{{ grade }}个积分！恭喜！</p>
