--- a/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam_share.html
+++ b/shopmanager/shopapp/weixin_examination/templates/weixin/examination/weixin_exam_share.html
@@ -2,7 +2,7 @@
 
 {% block title %}
 {% if paper_finished %}
-超难！崔玉涛经典育儿问答,我击败了90%的新手妈妈！快来挑战吧！
+超难！崔玉涛经典育儿问答,我击败了{{ percentage }}%的新手妈妈！快来挑战吧！
 {% else %}
 崔玉涛-经典育儿知识问答 
 {% endif %}
