--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -45,7 +45,11 @@
 	  <p>优尼美妈们：</p>
 	  <p>优尼世界积分系统正式上线啦！</p>
 	  <p>9月答题赢积分，可用积分<font style="color:red;font-size:20px">折上再5折换购</font>小小派睡袋哦！（注：每天仅限积分排名前100位！）</p>
-	  <p style="font-size:20px"><a href="/weixin/examination/share/{{ pk }}/">点击进入答题挑战 >></a></p>
+	</div>
+      </div>
+      <div class="row">
+	<div class="col-xs-12" style="text-align:center; margin-top:10px">
+	  <a class="btn btn-warning" href="/weixin/examination/share/{{ pk }}/">点击进入答题挑战 >></a>
 	</div>
       </div>
     </div>
